<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/esp"
        android:title="@string/esp"
        android:icon="@drawable/menu_especialist"/>

    <item android:id="@+id/data"
        android:title="@string/data"
        android:icon="@drawable/menu_mydata"/>

    <item android:id="@+id/turn"
        android:title="@string/turn"
        android:icon="@drawable/menu_myturn"/>

    <item android:id="@+id/myesp"
        android:title="@string/myesp"
        android:icon="@drawable/menu_myesp"/>

    <group android:menuCategory="container">
        <item android:id="@+id/contac"
            android:title="@string/contac"
            android:icon="@drawable/menu_contact"/>

        <item android:id="@+id/signout"
            android:title="@string/signout"
            android:icon="@drawable/menu_logout"/>
    </group>
</menu>