<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".myappointment.ui.MyAppointmentFragment"
    android:fitsSystemWindows="true"
    android:layout_marginTop="10dp">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text">

        <include layout="@layout/data_placeholder_layout"/>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_regular"
        android:paddingBottom="10dp"
        android:text="@string/myAppointments"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/LightGrey"
        android:elevation="15dp"
        android:outlineSpotShadowColor="@color/LightGrey"
        app:layout_constraintBottom_toTopOf="@+id/myAppointments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <LinearLayout
        android:id="@+id/nullAppointment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/empty_image"
            android:src="@mipmap/empty_box"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".1"/>

        <TextView
            android:id="@+id/empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/nothing_here"
            android:textColor="@color/Gray"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/newAppontment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:textSize="20sp"
            android:text="@string/new_appointment"
            android:layout_marginTop="60dp"
            android:textColor="@color/Secondary"
            android:onClick="textViewClickeable"
            android:clickable="true"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myAppointments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>