<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MakeAppointments"
    android:fitsSystemWindows="true"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/imageButton"
            android:background="@color/White"
            android:elevation="0dp"
            android:outlineAmbientShadowColor="@color/White"
            android:outlineSpotShadowColor="@color/White"
            android:backgroundTint="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:borderWidth="0dp"
            android:src="@drawable/ic_back"/>

        <TextView
            android:id="@+id/title"
            android:layout_marginHorizontal="60dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/makeAppointment"
            android:textSize="28sp"
            android:textColor="@color/Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/LightGrey"
        android:elevation="15dp"
        android:outlineSpotShadowColor="@color/LightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        android:paddingHorizontal="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <LinearLayout
            android:id="@+id/speciality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/container">

            <TextView
                android:id="@+id/today_date_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/rubik_regular"
                android:paddingHorizontal="20dp"
                android:text="Fecha"
                android:textColor="@color/DimGray"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/today_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/rubik_regular"
                android:paddingHorizontal="20dp"
                android:text="ddmmaaaa"
                android:textColor="@color/DimGray"
                android:textSize="18sp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/rubik_regular"
                android:paddingHorizontal="20dp"
                android:text="Especialidad"
                android:textColor="@color/DimGray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newAppointmentSpeciality"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edit_text_shape"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/especialidad_hint"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:expandedHintEnabled="true"
                app:hintTextColor="@color/Secondary">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteSpeciality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="none"

                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/professionalInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speciality">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/rubik_regular"
                android:paddingHorizontal="20dp"
                android:text="Professional"
                android:textColor="@color/DimGray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newAppointmentProfessional"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edit_text_shape"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/professional_hint"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:expandedHintEnabled="true"
                app:hintTextColor="@color/Secondary">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteProfessional"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="none"

                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/professionalInput">

            <CheckBox
                android:id="@+id/checkbox_monday"
                android:labelFor="@+id/checkbox_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lu" />

            <CheckBox
                android:id="@+id/checkbox_tuesday"
                android:labelFor="@+id/checkbox_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ma" />
            <CheckBox
                android:id="@+id/checkbox_wednesday"
                android:labelFor="@+id/checkbox_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mi" />
            <CheckBox
                android:id="@+id/checkbox_thursday"
                android:labelFor="@+id/checkbox_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ju" />
            <CheckBox
                android:id="@+id/checkbox_friday"
                android:labelFor="@+id/checkbox_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vi" />
            <CheckBox
                android:id="@+id/checkbox_saturday"
                android:labelFor="@+id/checkbox_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sa" />
            <CheckBox
                android:id="@+id/checkbox_sunday"
                android:labelFor="@+id/checkbox_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Do" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>