<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newappointment.ui.NewAppointment"
    android:fitsSystemWindows="true"
    android:layout_marginTop="10dp">



    <LinearLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/imageButton"
            android:background="@color/White"
            android:elevation="0dp"
            android:outlineAmbientShadowColor="@color/White"
            android:outlineSpotShadowColor="@color/White"
            android:backgroundTint="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:borderWidth="0dp"
            android:src="@drawable/ic_back"/>

        <TextView
            android:id="@+id/title"
            android:layout_marginHorizontal="60dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/newAppointment"
            android:textSize="28sp"
            android:textColor="@color/Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/LightGrey"
        android:elevation="15dp"
        android:outlineSpotShadowColor="@color/LightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:layout_marginTop="65dp"
        android:paddingHorizontal="5dp">

        <LinearLayout
            android:id="@+id/speciality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/container"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="Especialidad"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/rubik_regular"
                android:textStyle="bold"
                android:textColor="@color/DimGray"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:id="@+id/newAppointmentSpeciality"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@android:color/transparent"
                app:hintTextColor="@color/Secondary"
                android:hint="Elige Especialidad"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="2dp"
                >
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteSpeciality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"

                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/professionalInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speciality"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="Professional"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/rubik_regular"
                android:textStyle="bold"
                android:textColor="@color/DimGray"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:id="@+id/newAppointmentProfessional"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@android:color/transparent"
                app:hintTextColor="@color/Secondary"
                android:hint="@string/professional_hint"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="2dp">
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteProfessional"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"

                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:alpha=".9"
            android:layout_marginTop="5dp"
            android:background="@color/DimGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/professionalInput" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/calendar_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2">

            <Button
                android:id="@+id/calendar_prev_btn"
                android:layout_marginStart="8dp"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/shape_button01"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/chevron_left"
                android:textSize="20sp"
                app:backgroundTint="@color/Secondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/txt_current_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/rubik_light"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:text="current date"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_marginEnd="8dp"
                android:id="@+id/calendar_next_btn"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/shape_button01"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/chevron_right"
                android:textSize="20sp"
                app:backgroundTint="@color/Secondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/calendar_recycler_view_CL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/calendar_constraint_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/calendarLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center"
                android:text="@string/chevron_left"
                android:textColor="@color/Secondary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calendar_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layoutAnimation="@anim/calendar_layout_animation"
                app:layout_constraintEnd_toStartOf="@+id/calendarRight"
                app:layout_constraintStart_toEndOf="@+id/calendarLeft"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/calendarRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center"
                android:text="@string/chevron_right"
                android:textColor="@color/Secondary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/show_appointments"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_toolbar02"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calendar_recycler_view_CL">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/appointmentTimeRecycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape_button_cancel"
                android:fontFamily="@font/rubik_regular"
                android:text="Confirmar Turno"
                android:textColor="@color/Secondary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="@color/White"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent=".6" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>